<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>AutomateCoWINApp</groupId>
  <artifactId>AutomateCoWINApp</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>AutomateCoWINApp</name>
   <description>This is a project to provide vaccine to people of india.</description>
   <properties>
		<basedir>D:\Automation\Java\Git_Repository\Automation_Project\Workspace\AutomateCoWINApp</basedir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<aspectj.version>1.8.10</aspectj.version>
	</properties>
   <dependencies>
	  	<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-java</artifactId>
		    <version>3.141.59</version>
		</dependency>
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-remote-driver</artifactId>
		    <version>3.141.59</version>
		</dependency>
		<dependency>
		    <groupId>com.itextpdf</groupId>
		    <artifactId>itextpdf</artifactId>
		    <version>5.5.13</version>
		</dependency>
		<dependency>
		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-clean-plugin</artifactId>
  		<version>3.1.0</version>
  		<type>maven-plugin</type>
  		</dependency>
  		<dependency>
			<groupId>org.zeroturnaround</groupId>
			<artifactId>zt-zip</artifactId>
			<version>1.13</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1</version>
		</dependency>	
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.testng</groupId>
		    <artifactId>testng</artifactId>
		    <version>7.4.0</version>
		    <scope>compile</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml</artifactId>
		    <version>3.17</version>
		</dependency>
		<dependency>
		    <groupId>log4j</groupId>
		    <artifactId>log4j</artifactId>
		    <version>1.2.17</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.9</version>
		</dependency>			
		<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>3.17</version>
		</dependency>
		<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>3.17</version>
		</dependency>
		<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml-schemas</artifactId>
				<version>3.17</version>
		</dependency>
		<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-scratchpad</artifactId>
				<version>5.2.1</version>
		</dependency>
		<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>ooxml-schemas</artifactId>
				<version>1.1</version>
		</dependency>
		<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>openxml4j</artifactId>
				<version>1.0-beta</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
		<dependency>
		    <groupId>com.aventstack</groupId>
		    <artifactId>extentreports</artifactId>
		    <version>3.1.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.8.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>4.4.1</version>
		</dependency>		
		<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
		<dependency>
		    <groupId>io.qameta.allure</groupId>
		    <artifactId>allure-testng</artifactId>
		    <version>2.13.9</version>
		</dependency>		
		<!-- https://mvnrepository.com/artifact/com.lowagie/itext -->
		<dependency>
		    <groupId>com.lowagie</groupId>
		    <artifactId>itext</artifactId>
		    <version>2.1.7</version>
		</dependency>		
	</dependencies>
	<build>
	<plugins>
		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
					 <testFailureIgnore>true</testFailureIgnore>
					 <reuseForks>true</reuseForks>
					 <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<suiteXmlFiles>
						<suiteXmlFile>testng.xml</suiteXmlFile>
					</suiteXmlFiles>
					<argLine>
						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
					</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjweaver</artifactId>
						<version>${aspectj.version}</version>
					</dependency>
				</dependencies>
		</plugin>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
		<plugin>
	        <artifactId>maven-compiler-plugin</artifactId>
	        <version>3.8.1</version>
	        <configuration>
	            <source>1.8</source>
	            <target>1.8</target>
	        </configuration>
	    </plugin>		
		<plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                <excludeDefaultDirectories>true</excludeDefaultDirectories>
                   <filesets>
                        <fileset>
                        	<directory>allure-results</directory>    
                        	<useDefaultExcludes>true</useDefaultExcludes>
                        	<followSymlinks>false</followSymlinks>                        
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <excludes>
   								<exclude>Template*</exclude>
							</excludes>                            
                        </fileset>
                        <fileset>
                        	<directory>download</directory>    
                        	<useDefaultExcludes>true</useDefaultExcludes>
                        	<followSymlinks>false</followSymlinks>                        
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <excludes>
   								<exclude>Template*</exclude>
							</excludes>                            
                        </fileset>
                        <fileset>
                        	<directory>report</directory>    
                        	<useDefaultExcludes>true</useDefaultExcludes>
                        	<followSymlinks>false</followSymlinks>                        
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <excludes>
   								<exclude>Template*</exclude>
							</excludes>                            
                        </fileset>
                        <fileset>
                        	<directory>target</directory>    
                        	<useDefaultExcludes>true</useDefaultExcludes>
                        	<followSymlinks>false</followSymlinks>                        
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <excludes>
   								<exclude>Template*</exclude>
							</excludes>                            
                        </fileset>
                        <fileset>
                        	<directory>screenshots</directory>    
                        	<useDefaultExcludes>true</useDefaultExcludes>
                        	<followSymlinks>false</followSymlinks>                        
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <excludes>
   								<exclude>Template*</exclude>
							</excludes>                            
                        </fileset>
                        <fileset>
                        	<directory>logs</directory>    
                        	<useDefaultExcludes>true</useDefaultExcludes>
                        	<followSymlinks>false</followSymlinks>                        
                            <includes>
                                <include>**/*</include>
                            </includes>
                            <excludes>
   								<exclude>Template*</exclude>
							</excludes>                            
                        </fileset>
                    </filesets>
                </configuration>
        </plugin>
        <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
	</plugins>
	 <resources>
     <resource>
       <directory>src/test/resources</directory>
       <filtering>true</filtering>
     </resource>
   </resources>
	</build>
		<reporting>
		<excludeDefaults>true</excludeDefaults>
		<plugins>
			<plugin>
				<groupId>io.qameta.allure</groupId>
				<artifactId>allure-maven</artifactId>
				<version>2.9</version>
			</plugin>
		</plugins>
	</reporting>
</project>